--- a/ZSZ.Admin.Web/HtmlPage1.html
+++ b/ZSZ.Admin.Web/HtmlPage1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="layui-box layui-laypage layui-laypage-default">
-        <a href="javascript:;" class="layui-laypage-prev">上一页</a>
+        <a href='javascript:void(0)' class='layui-laypage-prev'>上一页</a>
         <span class="layui-laypage-curr"><em class="layui-laypage-em"></em><em>1</em></span>
         <a href="javascript:void(0)">2</a>
         <a href="javascript:;" class="layui-laypage-next">下一页</a>
